# pepes

./: README.md  pyproject.toml
catalogue/: models.py
pepes/: manage.py
pepes/catalogue/: admin.py  models.py  urls.py  views.py
pepes/catalogue/api/: serializers.py  views.py
pepes/catalogue/migrations/: 0001_initial.py  0002_auto_20200229_0757.py  0003_auto_20200229_0803.py
pepes/catalogue/templates/catalogue/: base.html  index.html
pepes/pepes/: asgi.py  settings.py  urls.py  wsgi.py
